# nox-lang

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  VERSIONING.md  build.zig  build.zig.zon  install.ps1  install.sh  nox-teknik-spesifikasyon.md
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  async_task_churn.nox  bounds_check_elision.nox  crypto_bench.nox  dict_bench.nox  dict_bench.rs  exception_check_overhead.nox  exceptions_control_flow.nox  for_loop_method_elision.nox  fs_bench.nox  fs_bench.rs  generics_protocols.nox  http_bench.zig  json_bench.nox  list_class_field.nox  list_release_overhead.nox  list_traversal.nox  lowlevel_arena.nox  math_bench.nox  math_bench.rs  method_call_elision.nox  numeric_recursion.nox  oop_arc_churn.nox  os_fs_bench.nox  os_fs_bench.rs  path_bench.nox  path_bench.rs  random_bench.nox  regex_bench.nox  run.zig  str_index_loop_licm.nox  string_passing.nox  strings_bench.nox  strings_bench.rs  strings_perf_bench.nox  strings_perf_bench.rs  tight_loop_arithmetic.nox  time_bench.nox  time_bench.rs
benchmarks/compare/: deep_equality.c  deep_equality.nox  deep_equality.py  exceptions_control_flow.c  exceptions_control_flow.nox  (+24 more)
benchmarks/rust_crates/: Cargo.toml
compiler/: lib.zig  lsp_main.zig  lsp_nav.zig  main.zig  module_loader.zig  project.zig  qbe_target.zig  span.zig
docs/: LANGUAGE.md  uretim-hazirlik-analizi.md
runtime/: foreign_bridge.zig  lib.zig  str.zig
scripts/: bump_version.sh  gen_hpy_ctx.py
shared/: abi_layout.zig
(+556 files in other folders)
