[package]
name = "nox_bench_rust_crates"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "json_crate_bench"
path = "src/bin/json_crate_bench.rs"

[[bin]]
name = "random_crate_bench"
path = "src/bin/random_crate_bench.rs"

[[bin]]
name = "regex_crate_bench"
path = "src/bin/regex_crate_bench.rs"

[[bin]]
name = "crypto_crate_bench"
path = "src/bin/crypto_crate_bench.rs"

[dependencies]
serde_json = "1"
rand = "0.9"
regex = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
